[package]
name = "rust-websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.18", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
futures = "0.3"
uuid = { version = "1.10.0", features = ["v4"] }
